Added example Insert Employee form

--- a/Payroll/app.config
+++ b/Payroll/app.config
@@ -28,7 +28,7 @@
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
         <Payroll.My.MySettings>
             <setting name="DB_HOST" serializeAs="String">
-                <value>cs.sfasu.edu</value>
+                <value>localhost</value>
             </setting>
             <setting name="DB_USER" serializeAs="String">
                 <value>cs425112</value>
