--- a/Payroll/Payroll.vbproj
+++ b/Payroll/Payroll.vbproj
@@ -51,20 +51,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data">
-      <HintPath>..\mysql-connector-net-6.9.5-noinstall\v4.0\MySql.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Data.Entity">
-      <HintPath>..\mysql-connector-net-6.9.5-noinstall\v4.0\MySql.Data.Entity.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Data.Entity.EF6">
-      <HintPath>..\mysql-connector-net-6.9.5-noinstall\v4.0\MySql.Data.Entity.EF6.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Fabric.Plugin">
-      <HintPath>..\mysql-connector-net-6.9.5-noinstall\v4.0\MySql.Fabric.Plugin.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Web">
-      <HintPath>..\mysql-connector-net-6.9.5-noinstall\v4.0\MySql.Web.dll</HintPath>
+    <Reference Include="mysql.data, Version=6.9.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\mysql-connector-net-5.2.7-noinstall\mysql.data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -91,11 +80,11 @@
   <ItemGroup>
     <Compile Include="Employee.vb" />
     <Compile Include="Employment.vb" />
-    <Compile Include="Form1.vb">
+    <Compile Include="InsertEmployee.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="InsertEmployee.Designer.vb">
+      <DependentUpon>InsertEmployee.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="modExtensions.vb" />
@@ -119,6 +108,9 @@
     <Compile Include="TimeClock.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="InsertEmployee.resx">
+      <DependentUpon>InsertEmployee.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
@@ -127,7 +119,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
