--- a/Payroll/Payroll.vbproj
+++ b/Payroll/Payroll.vbproj
@@ -174,6 +174,24 @@
     <Compile Include="TimeClock.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="EmployeeUI\EmployeeCardSwipe.resx">
+      <DependentUpon>EmployeeCardSwipe.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmployeeUI\EmployeeClockInMainMenu.resx">
+      <DependentUpon>EmployeeClockInMainMenu.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmployeeUI\EmployeeKeypadEntry.resx">
+      <DependentUpon>EmployeeKeypadEntry.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmployeeUI\EmployeeMissedPunch.resx">
+      <DependentUpon>EmployeeMissedPunch.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManagerUI\ManagerMainMenu.resx">
+      <DependentUpon>ManagerMainMenu.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManagerUI\ManagerTaxInfoDetail.resx">
+      <DependentUpon>ManagerTaxInfoDetail.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
@@ -194,6 +212,39 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Card.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Card.png.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon_Avatar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ribbon_EmployeeClockIn.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ribbon_EmployeeInfo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ribbon_EmployeeKeypad.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ribbon_ManagerMainMenu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ribbon_MissedPunch.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ribbon_PaySummary.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ribbon_SwipeCard.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ribbon_TaxSummary.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
