Fixed InsertEmployee form

--- a/Payroll/app.config
+++ b/Payroll/app.config
@@ -27,9 +27,6 @@
     </system.diagnostics>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><applicationSettings>
         <Payroll.My.MySettings>
-            <setting name="DB_HOST" serializeAs="String">
-                <value>localhost</value>
-            </setting>
             <setting name="DB_USER" serializeAs="String">
                 <value>cs425112</value>
             </setting>
@@ -38,6 +35,9 @@
             </setting>
             <setting name="DB_NAME" serializeAs="String">
                 <value>cs425112</value>
+            </setting>
+            <setting name="DB_HOST" serializeAs="String">
+                <value>76.233.242.6</value>
             </setting>
         </Payroll.My.MySettings>
     </applicationSettings>
