--- a/Payroll/My Project/Settings.settings
+++ b/Payroll/My Project/Settings.settings
@@ -2,9 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="My" GeneratedClassName="MySettings" UseMySettingsClassName="true">
   <Profiles />
   <Settings>
-    <Setting Name="DB_HOST" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">cs.sfasu.edu</Value>
-    </Setting>
     <Setting Name="DB_USER" Type="System.String" Scope="Application">
       <Value Profile="(Default)">cs425112</Value>
     </Setting>
@@ -13,6 +10,9 @@
     </Setting>
     <Setting Name="DB_NAME" Type="System.String" Scope="Application">
       <Value Profile="(Default)">cs425112</Value>
+    </Setting>
+    <Setting Name="DB_HOST" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">76.233.242.6</Value>
     </Setting>
   </Settings>
 </SettingsFile>
