--- a/Payroll/Payroll.vbproj
+++ b/Payroll/Payroll.vbproj
@@ -51,9 +51,8 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="mysql.data, Version=6.9.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\mysql-connector-net-5.2.7-noinstall\mysql.data.dll</HintPath>
+    <Reference Include="MySql.Data">
+      <HintPath>..\mysql-connector-net-6.9.5-noinstall\v4.0\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
